Project

General

Profile

Actions

Bug #19832

closed

Potential IO hang if image is flattened while read request is in-flight

Added by Jason Dillaman almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel,hammer
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the child object doesn't exist and the parent is removed after the IO started, the IO will hang w/o completing.

https://github.com/ceph/ceph/blob/master/src/librbd/io/ObjectRequest.cc#L207

        if (image_ctx->parent == NULL) {
          ldout(image_ctx->cct, 20) << "parent is gone; do nothing" << dendl;
          m_state = LIBRBD_AIO_READ_FLAT;
          finished = false;
          break;
        }

The "finished = false" line should be removed


Related issues 3 (0 open3 closed)

Copied to rbd - Backport #20152: hammer: Potential IO hang if image is flattened while read request is in-flightRejectedAlexey SheplyakovActions
Copied to rbd - Backport #20153: jewel: Potential IO hang if image is flattened while read request is in-flightResolvedNathan CutlerActions
Copied to rbd - Backport #20154: kraken: Potential IO hang if image is flattened while read request is in-flightResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman almost 7 years ago

Looks like the issue was introduced in commit 190c185b74b5959000d8dc79e8ee0a10ed0fc979

Actions #2

Updated by Mykola Golub almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Jason Dillaman almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20152: hammer: Potential IO hang if image is flattened while read request is in-flight added
Actions #5

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20153: jewel: Potential IO hang if image is flattened while read request is in-flight added
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20154: kraken: Potential IO hang if image is flattened while read request is in-flight added
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF