hammer: librbd: potential read IO hang when image is flattened

Fixes: http://tracker.ceph.com/issues/19832
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 10d58618e7c632ef01b9537492239e0a042dc17e)

Conflicts:
	src/librbd/io/ObjectRequest.cc: no such file in Hammer,
	  patch AioRead::should_complete() instead (defined in
	  src/librbd/AioRequest.cc)